--- a/projects/topomojo-work/src/app/admin/gamespace-browser/gamespace-browser.component.html
+++ b/projects/topomojo-work/src/app/admin/gamespace-browser/gamespace-browser.component.html
@@ -40,11 +40,11 @@
     </button>
   </div>
   <div class="col-3">
-    <small class="pop-info px-1">{{g.globalId | slice:0:8}}</small>&nbsp;
+    <small class="pop-info px-1">{{g.id | slice:0:8}}</small>&nbsp;
     <small>{{g.whenCreated | ago}}</small>
   </div>
   <div class="col-5">
-    <span>{{g.clientId}}</span>
+    <span>{{g.managerName}}</span>
     <small> &mdash; {{g.name}}</small>
   </div>
   <div class="col-3">
