--- a/projects/topomojo-work/src/app/admin/user-browser/user-browser.component.html
+++ b/projects/topomojo-work/src/app/admin/user-browser/user-browser.component.html
@@ -20,7 +20,7 @@
     <span class="text-secondary">{{user.name}}</span>
     <br/>
     <small class="text-muted ml-4">
-      <app-clipspan>{{user.globalId}}</app-clipspan>
+      <app-clipspan>{{user.id}}</app-clipspan>
     </small>
   </div>
   <div class="col-1">
