--- a/projects/topomojo-work/src/app/files-editor/files-editor.component.html
+++ b/projects/topomojo-work/src/app/files-editor/files-editor.component.html
@@ -1,4 +1,4 @@
 <!-- Copyright 2021 Carnegie Mellon University. -->
 <!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
 
-<app-iso-manager [guid]="summary.globalId"></app-iso-manager>
+<app-iso-manager [guid]="summary.id"></app-iso-manager>
