--- a/projects/topomojo-work/src/app/settings-editor/settings-editor.component.html
+++ b/projects/topomojo-work/src/app/settings-editor/settings-editor.component.html
@@ -41,7 +41,7 @@
         <fa-icon [icon]="faTimes"></fa-icon>
         <span>Remove</span>
       </app-confirm-button>
-      <span>{{worker.personName}}</span>
+      <span>{{worker.subjectName}}</span>
     </div>
 
     <div class="mt-2">
