--- a/projects/topomojo-work/src/app/workspace-player/workspace-player.component.html
+++ b/projects/topomojo-work/src/app/workspace-player/workspace-player.component.html
@@ -3,6 +3,6 @@
 
 <div class="form-group bg-light">
   <div class="form-control player">
-    <app-gamespace [id]="summary.globalId"></app-gamespace>
+    <app-gamespace [id]="summary.id"></app-gamespace>
   </div>
 </div>
