--- a/projects/topomojo-work/src/app/admin/admin/admin.component.html
+++ b/projects/topomojo-work/src/app/admin/admin/admin.component.html
@@ -3,7 +3,7 @@
 
 <div class="reader">
   <!-- <app-presence-bar></app-presence-bar> -->
-  <!-- <app-clipspan class="small text-muted">{{ws.globalId}}</app-clipspan> -->
+  <!-- <app-clipspan class="small text-muted">{{ws.id}}</app-clipspan> -->
   <h1 class="mb-0 pb-0">Admin Dashboard</h1>
   <div class="mb-4">
     <a class="mr-4 small" routerLinkActive="text-primary" [routerLink]="['/admin/dashboard']">Dashboard</a>
