--- a/projects/topomojo-work/src/app/app.component.html
+++ b/projects/topomojo-work/src/app/app.component.html
@@ -15,6 +15,7 @@
 
   <div>
     <a class="btn btn-outline-light btn-sm" [routerLink]="['/about']">About</a>
+    <button *ngIf="!!user && user.isAdmin" class="btn btn-outline-light btn-sm ml-2" [routerLink]="['/admin']">Admin</button>
     <button *ngIf="!!user" class="btn btn-outline-light btn-sm ml-2" (click)="logout()">Logout</button>
   </div>
 </nav>
