--- a/projects/topomojo-work/src/app/templates-editor/templates-editor.component.html
+++ b/projects/topomojo-work/src/app/templates-editor/templates-editor.component.html
@@ -6,7 +6,7 @@
   <small>Any workspace vm left idle for a day may be deleted by the janitor.</small>
 </alert>
 
-<div *ngIf="workspace.gamespaceCount" class="text-center">
+<div *ngIf="workspace.stats.activeGamespaceCount" class="text-center">
   <p>
     There are gamespaces running from this workspace. <br/>
     Changes to machines cannot be saved in this situation. <br/>
@@ -15,7 +15,7 @@
 
   <app-confirm-button btnClass="btn btn-warning" (confirm)="deleteGamespaces()">
     <fa-icon [icon]="faTrash"></fa-icon>
-    <span>Delete {{workspace.gamespaceCount}} Gamespace{{(workspace.gamespaceCount || 1) > 1 ? 's' : ''}}</span>
+    <span>Delete {{workspace.stats.activeGamespaceCount}} Gamespace{{workspace.stats.activeGamespaceCount === 1 ? '' : 's'}}</span>
   </app-confirm-button>
 
   <hr>
@@ -23,4 +23,4 @@
 
 <app-template-editor *ngFor="let t of workspace.templates" [template]="t" (deleted)="remove($event)"></app-template-editor>
 
-<app-template-selector [workspaceId]="workspace.globalId" (added)="add($event)"></app-template-selector>
+<app-template-selector [workspaceId]="workspace.id" (added)="add($event)"></app-template-selector>
