--- a/projects/topomojo-mks/src/styles.scss
+++ b/projects/topomojo-mks/src/styles.scss
@@ -79,8 +79,7 @@ button {
   cursor: default;
 }
 button:hover {
-  background-color: $light;
-  color: $bright;
+  background-color: $bright;
 }
 .btn-lg {
   margin: 8px;
