fix question grader selection

--- a/projects/topomojo-work/src/app/challenge-editor/question-form/question-form.component.html
+++ b/projects/topomojo-work/src/app/challenge-editor/question-form/question-form.component.html
@@ -52,9 +52,9 @@
           <label for="grader-input{{vindex}}.{{this.index}}.{{i}}" class="mb-0">Grader</label>
           <div id="grader-input{{vindex}}.{{this.index}}.{{i}}" class="btn-group" btnRadioGroup formControlName="grader" (mouseleave)="matchtip=0">
             <label class="btn btn-sm btn-outline-secondary" btnRadio="match" (mouseenter)="matchtip=1">Match</label>
-            <label class="btn btn-sm btn-outline-secondary" btnRadio="matchany" (mouseenter)="matchtip=2">MatchAny</label>
-            <label class="btn btn-sm btn-outline-secondary" btnRadio="matchall" (mouseenter)="matchtip=3">MatchAll</label>
-            <label class="btn btn-sm btn-outline-secondary" btnRadio="matchalpha" (mouseenter)="matchtip=4">MatchAlpha</label>
+            <label class="btn btn-sm btn-outline-secondary" btnRadio="matchAny" (mouseenter)="matchtip=2">MatchAny</label>
+            <label class="btn btn-sm btn-outline-secondary" btnRadio="matchAll" (mouseenter)="matchtip=3">MatchAll</label>
+            <label class="btn btn-sm btn-outline-secondary" btnRadio="matchAlpha" (mouseenter)="matchtip=4">MatchAlpha</label>
           </div>
         </div>
         <div class="form-group col-2 py-0">
