--- a/projects/topomojo-work/src/app/admin/user-browser/user-browser.component.html
+++ b/projects/topomojo-work/src/app/admin/user-browser/user-browser.component.html
@@ -76,6 +76,7 @@
           <label class="btn btn-outline-info btn-sm" btnRadio="builder">Builder</label>
           <label class="btn btn-outline-info btn-sm" btnRadio="creator">Creator</label>
           <label class="btn btn-outline-info btn-sm" btnRadio="administrator">Admin</label>
+          <label class="btn btn-outline-info btn-sm" btnRadio="disabled">Disabled</label>
         </div>
         <small><pre>
           - Builder: bypasses some checks, like blocking bridge-net
