--- a/projects/topomojo-work/src/app/gamespace-card/gamespace-card.component.html
+++ b/projects/topomojo-work/src/app/gamespace-card/gamespace-card.component.html
@@ -3,10 +3,13 @@
 
 <div class="card shadow-sm mb-2" routerLinkActive="pop-success" #rla="routerLinkActive" tabindex="0" (click)="go()" (keydown)="keydown($event)">
   <div class="card-body" [class.pop-info]="hovering && !rla.isActive" (mouseenter)="hovering=true" (mouseleave)="hovering=false">
-    <div class="card-title">{{gamespace.name}}</div>
-    <div *ngIf="countdown$ | async as dday">Expires in: {{dday | countdown}}</div>
+    <div class="card-title">
+      <span>{{gamespace.name}}</span>
+      <small *ngIf="countdown$ | async as dday"> &mdash; expires in: {{dday | countdown}}</small>
+    </div>
     <div [hidden]="!(hovering || rla.isActive)">
-      <a class="mr-2 small" routerLinkActive="text-primary" [routerLink]="['/mojo', gamespace.id, gamespace.slug]">Play</a>
+      <a *ngIf="!!gamespace.startTime" class="mr-2 small" routerLinkActive="text-primary" [routerLink]="['/mojo', gamespace.id, gamespace.slug]">Continue</a>
+      <a *ngIf="!gamespace.startTime" class="mr-2 small" routerLinkActive="text-primary" [routerLink]="['/mojo',  gamespace.id, gamespace.slug]">Preview</a>
     </div>
   </div>
 </div>
