--- a/projects/topomojo-work/src/app/gamespace/gamespace.component.html
+++ b/projects/topomojo-work/src/app/gamespace/gamespace.component.html
@@ -2,68 +2,42 @@
 <!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
 
 <ng-container *ngIf="gamespace$ | async as game">
-
-  <div *ngIf="!game.id && !launching">
-    <div class="form-row mb-1">
-      <div class="col-3">
-        <label class="mb-0 form-label-sm" for="variant-input">Variant</label>
-        <input id="variant-input" class="form-control form-control-sm" type="number" [(ngModel)]="settings.variant">
+  <div class="reader mb-4">
+    <div class="text-center">
+      <div *ngIf="game.session?.isBefore && !launching">
+        <app-confirm-button btnClass="btn btn-lg btn-secondary my-2" (confirm)="launch()">
+          <fa-icon [icon]="faBolt"></fa-icon>
+          <span>Start</span>
+        </app-confirm-button>
       </div>
-      <div class="col-3">
-        <label class="mb-0 form-label-sm" for="maxattempts-input">Max Attempts</label>
-        <input id="maxattempts-input" class="form-control form-control-sm" type="number" [(ngModel)]="settings.maxAttempts">
+      <ng-container *ngIf="!game.gameOver && game.session?.isDuring && !launching">
+        <app-confirm-button btnClass="btn btn-lg btn-warning my-2" (confirm)="complete(game.id)">
+          <fa-icon [icon]="faTrash"></fa-icon>
+          <span>End</span>
+        </app-confirm-button>
+        <div><span class="clock">{{game.session.countdown | clock}}</span></div>
+      </ng-container>
+      <div *ngIf="game.gameOver" class="text-center">
+        <span>Game Over</span>
       </div>
-      <div class="col-3">
-        <label class="mb-0 form-label-sm" for="maxminutes-input">Max Minutes</label>
-        <input id="maxminutes-input" class="form-control form-control-sm" type="number" [(ngModel)]="settings.maxMinutes">
-      </div>
-      <div class="col-3">
-        <label class="mb-0 form-label-sm" for="points-input">Point Value</label>
-        <input id="points-input" class="form-control form-control-sm" type="number" [(ngModel)]="settings.points">
+      <div>
+        <app-spinner *ngIf="launching" class=""></app-spinner>
       </div>
     </div>
-    <app-confirm-button  btnClass="btn btn-sm btn-secondary" (confirm)="launch()">
-      <fa-icon [icon]="faBolt"></fa-icon>
-      <span>Start</span>
-    </app-confirm-button>
-  </div>
-  <app-confirm-button *ngIf="!!game.id && !launching" btnClass="btn btn-sm btn-warning" (confirm)="reset(game.id)">
-    <fa-icon [icon]="faTrash"></fa-icon>
-    <span>Reset</span>
-  </app-confirm-button>
 
-  <div class="text-center">
-    <app-spinner *ngIf="launching" class=""></app-spinner>
-  </div>
+    <app-error-div [errors]="errors"></app-error-div>
 
-  <app-error-div [errors]="errors"></app-error-div>
+    <app-gamespace-state [game]="game"></app-gamespace-state>
 
-  <markdown [data]="game.markdown"></markdown>
-
-  <markdown [data]="game.challenge?.text || ''"></markdown>
-
-  <ng-container *ngIf="!!game.id && game.isActive">
-    <h3>Gamespace Resources</h3>
-    <div *ngIf="!deploying" class="d-flex my-4">
-      <button *ngFor="let vm of game.vms" class="btn btn-sm btn-dark mr-2" (click)="console(vm)">
-        <fa-icon [icon]="faTv"></fa-icon>
-        <span>{{vm.name}}</span>
-      </button>
-      <app-confirm-button *ngIf="game.vms?.length" btnClass="btn btn-sm btn-outline-warning" (confirm)="stop()">
+    <div *ngIf="!game.gameOver && game.session?.isDuring" class="text-center">
+      <app-confirm-button btnClass="btn btn-warning my-2" (confirm)="complete(game.id)">
         <fa-icon [icon]="faTrash"></fa-icon>
-        <span>Destroy</span>
+        <span>End</span>
       </app-confirm-button>
-      <app-confirm-button *ngIf="!game.vms?.length" btnClass="btn btn-sm btn-outline-warning" (confirm)="start()">
-        <fa-icon [icon]="faBolt"></fa-icon>
-        <span>Deploy</span>
-      </app-confirm-button>
+      <div><span class="clock">{{game.session.countdown | clock}}</span></div>
     </div>
-    <div *ngIf="deploying" class="text-center">
-      <app-spinner></app-spinner>
+    <div *ngIf="game.gameOver" class="text-center">
+      <span>Game Over</span>
     </div>
-  </ng-container>
-
-  <h3 *ngIf="game.challenge?.questions?.length">Challenge Questions</h3>
-  <app-gamespace-quiz [state]="game"></app-gamespace-quiz>
-
+  </div>
 </ng-container>
