--- a/projects/topomojo-work/src/app/settings-editor/settings-editor.component.html
+++ b/projects/topomojo-work/src/app/settings-editor/settings-editor.component.html
@@ -7,8 +7,8 @@
 </alert>
 
 <pre>
-  Launch Count: {{summary.stats.launchCount}}
-  Last Activity: {{summary.stats.lastActivity}}
+  Launch Count: {{workspace.stats.launchCount}}
+  Last Activity: {{workspace.stats.lastActivity}}
 </pre>
 
 <form [formGroup]="form">
@@ -32,16 +32,22 @@
 
   <div class="form-group bg-light">
     <label class="mb-0" for="audience-input">Audience</label>
-    <input id="audience-input" type="text" class="form-control" formControlName="audience" name="audience">
-    <small>space-delimited list of clients that can launch this as a gamespace</small>
+    <input id="audience-input" type="text" class="form-control" formControlName="audience">
+    <small>space-delimited list of clients that can launch this as a gamespace; '<code>everyone</code>' is the global audience</small>
+  </div>
+
+  <div class="form-group bg-light">
+    <label class="mb-0" for="audience-input">Duration</label>
+    <input id="durationMinutes-input" type="number" class="form-control" formControlName="durationMinutes">
+    <small>recommended duration in minutes</small>
   </div>
 
   <div class="form-group bg-light">
     <label class="mb-0">Collaboration</label>
 
-    <div *ngIf="!summary.workers?.length">&mdash; none</div>
+    <div *ngIf="!workspace.workers?.length">&mdash; none</div>
 
-    <div *ngFor="let worker of summary.workers">
+    <div *ngFor="let worker of workspace.workers">
       <app-confirm-button class="mr-2" btnClass="btn btn-outline-danger btn-sm" (confirm)="delist(worker)" aria-label="remove collaborator">
         <fa-icon [icon]="faTimes"></fa-icon>
         <span>Remove</span>
