--- a/projects/topomojo-work/src/app/admin/admin/admin.component.html
+++ b/projects/topomojo-work/src/app/admin/admin/admin.component.html
@@ -4,6 +4,8 @@
 <div class="reader">
   <!-- <app-presence-bar></app-presence-bar> -->
   <!-- <app-clipspan class="small text-muted">{{ws.id}}</app-clipspan> -->
+  <small class="text-muted">{{info.commit}}</small>
+
   <h1 class="mb-0 pb-0">Admin Dashboard</h1>
   <div class="mb-4">
     <a class="mr-4 small" routerLinkActive="text-primary" [routerLink]="['/admin/dashboard']">Dashboard</a>
@@ -12,15 +14,17 @@
     <a class="mr-4 small" routerLinkActive="text-primary" [routerLink]="['/admin/templates']">Templates</a>
     <a class="mr-4 small" routerLinkActive="text-primary" [routerLink]="['/admin/machines']">Machines</a>
     <a class="mr-4 small" routerLinkActive="text-primary" [routerLink]="['/admin/users']">Users</a>
+    <a class="mr-4 small" routerLinkActive="text-primary" [routerLink]="['/admin/log']">Log</a>
   </div>
 
-  <div [ngSwitch]="section">
+  <div [ngSwitch]="section" class="mb-4">
     <app-dashboard *ngSwitchCase="'dashboard' || ''"></app-dashboard>
     <app-gamespace-browser *ngSwitchCase="'gamespaces'"></app-gamespace-browser>
     <app-workspace-browser *ngSwitchCase="'workspaces'"></app-workspace-browser>
     <app-template-browser *ngSwitchCase="'templates'"></app-template-browser>
     <app-vm-browser *ngSwitchCase="'machines'"></app-vm-browser>
     <app-user-browser *ngSwitchCase="'users'"></app-user-browser>
+    <app-log-viewer *ngSwitchCase="'log'"></app-log-viewer>
   </div>
 </div>
 
