--- a/projects/topomojo-work/src/app/admin/dashboard/dashboard.component.html
+++ b/projects/topomojo-work/src/app/admin/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
+<!-- Copyright 2021 Carnegie Mellon University. -->
+<!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
+
 
 <h4>Hub Connections</h4>
 <div *ngFor="let c of connections | async; trackBy:trackById" class="mx-4 my-1">{{c.profileName}}</div>
