--- a/projects/topomojo-work/src/app/admin/template-detail-form/template-detail-form.component.html
+++ b/projects/topomojo-work/src/app/admin/template-detail-form/template-detail-form.component.html
@@ -1,3 +1,6 @@
+<!-- Copyright 2021 Carnegie Mellon University. -->
+<!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
+
 <form #form="ngForm" [ngFormOptions]="{updateOn: 'change'}" (ngSubmit)="update()">
   <div class="text-center">
     <button class="btn btn-secondary btn-sm" type="submit" [disabled]="!form.dirty || !form.valid">Save Settings</button>
