--- a/projects/topomojo-work/src/app/admin/apikeys/apikeys.component.html
+++ b/projects/topomojo-work/src/app/admin/apikeys/apikeys.component.html
@@ -1,3 +1,6 @@
+<!-- Copyright 2021 Carnegie Mellon University. -->
+<!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
+
 <div *ngFor="let key of list | async; trackBy:trackById">
   <span class="mr-2">&mdash; <code>{{ key.whenCreated | slice:0:19 }}</code> by {{ key.name }}</span>
   <app-confirm-button btnClass="btn btn-outline-info btn-sm" (confirm)="delete(key)">
