--- a/projects/topomojo-work/src/app/gamespace-state/gamespace-state.component.html
+++ b/projects/topomojo-work/src/app/gamespace-state/gamespace-state.component.html
@@ -1,3 +1,6 @@
+<!-- Copyright 2021 Carnegie Mellon University. -->
+<!-- Released under a 3 Clause BSD-style license. See LICENSE.md in the project root. -->
+
 <markdown [data]="game.markdown"></markdown>
 
 <markdown [data]="game.challenge?.text || ''"></markdown>
